[package]
name = "ppoker"
description = "Client for planning poker - https://github.com/sne11ius/pp"
authors = ["Jannik Kolodziej <github@jkolodziej.de>"]
license = "EUPL-1.2"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tungstenite = { version = "0.26", features = ["native-tls"] }
tui-big-text = "0.7"
urlencoding = "2"
log = "0.4"
snafu = "0.8"
simplelog = "0.12"
tui-logger = "0.17"
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
whoami = "1.6"
petname = "2"
regex = "1.11"
glob = "0.3"
filetime = "0.2"
semver = "1.0"
tempfile = "3"
reqwest = "0.12"
enum-iterator = "2"

[target.'cfg( target_family = "windows" )'.dependencies]
self_update = { version = "0.41", features = ["archive-zip", "compression-zip-deflate"] }

[target.'cfg( target_family = "unix" )'.dependencies]
self_update = { version = "0.40", features = ["archive-tar", "compression-flate2"] }

[dev-dependencies]
pretty_assertions = { version = "1", features = ["unstable"] }
assert-json-diff = "2"

[profile.release]
lto = true