[workspace]
members = ["crates/ppoker-core", "crates/ppoker-wasm"]
default-members = ["."]
resolver = "2"

[package]
name = "ppoker"
description = "Client for planning poker - https://github.com/sne11ius/pp"
authors = ["Jannik Kolodziej <github@jkolodziej.de>"]
license = "EUPL-1.2"
version = "0.5.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppoker-core = { path = "crates/ppoker-core" }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
tungstenite = { version = "0.30", features = ["native-tls"] }
tui-big-text = "0.8"
log = "0.4"
snafu = "0.9"
tui-logger = "0.18"
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
whoami = "2.1"
petname = "3"
regex = "1.12"
glob = "0.3"
filetime = "0.2"
semver = "1.0"
tempfile = "3"
reqwest = "0.13"
enum-iterator = "2"
pulldown-cmark = "0.13"
subprocess = "1.2"

[target.'cfg( target_family = "windows" )'.dependencies]
self_update = { version = "0.44", features = ["archive-zip", "compression-zip-deflate"] }

[target.'cfg( target_family = "unix" )'.dependencies]
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }

[dev-dependencies]
pretty_assertions = { version = "1", features = ["unstable"] }
mockall = "0.15"
insta = "1.44.3"
temp-env = "0.3"
serde_json = "1"

[profile.release]
lto = true
