[package]
name = "ppoker-core"
description = "Portable client models for ppoker"
authors = ["Jannik Kolodziej <github@jkolodziej.de>"]
license = "EUPL-1.2"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
