[package]
name = "ppoker-core"
description = "Portable client models for ppoker"
authors = ["Jannik Kolodziej <github@jkolodziej.de>"]
license = "EUPL-1.2"
version = "0.5.6"
publish = false
edition = "2021"

[features]
typescript = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tsify = { version = "=0.5.6", optional = true, default-features = false, features = ["js"] }
wasm-bindgen = { version = "=0.2.126", optional = true }
