[package]
name = "ppoker-wasm"
description = "Typed WebAssembly facade for ppoker"
authors = ["Jannik Kolodziej <github@jkolodziej.de>"]
license = "EUPL-1.2"
version = "0.5.6"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "=0.3.103"
ppoker-core = { path = "../ppoker-core", features = ["typescript"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
tsify = { version = "=0.5.6", default-features = false, features = ["js"] }
wasm-bindgen = "=0.2.126"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "=0.3.103", features = [
    "BinaryType",
    "Event",
    "MessageEvent",
    "Performance",
    "WebSocket",
    "Window",
] }

[dev-dependencies]
serde_json = "1"
wasm-bindgen-test = "=0.3.76"
wasm-bindgen-futures = "=0.4.76"
